Added Scoring